# BPTorch

./: .gitignore  License  README.md  example.py  main.py  pyproject.toml
BPTorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BPTorch/datasets/: __init__.py  patch.py  repository.py  slide.py  wsi.py
BPTorch/utils/: __init__.py  collate.py  metadata.py
src/datasets/: bg_removal.py  patch.py  slide.py
src/utils/: deprecated_metadata.py  metadata.py
