# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BPTorch"
version = "0.1.0"
License = "License"
description = "A torch datasat for direct interfacing with BigPicture data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["wsidicom", "torch", "scikit-image", "opencv-python", "numpy", "matplotlib", "bigpicture_metadata_interface @ git+https://github.com/imi-bigpicture/bigpicture_metadata_interface.git@06e86065d1924f28a74e542a2233c10675df0790"]

[tool.setuptools]
package-dir = {"" = "BPTorch"}

[tool.setuptools.packages.find]
where = ["BPTorch"]